✏️fix: 테스트 코드 전반적으로 수정